--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -6,7 +6,7 @@
     android:background="@color/my_custom_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    tools:context=".LogInActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,9 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        android:id="@+id/edEmail"
+        android:id="@+id/edLogusername"
         android:backgroundTint="@color/white"
-        android:hint="Email id "
+        android:hint="Username"
         app:hintTextColor="@color/black"
         android:layout_marginTop="60dp"
         android:layout_marginStart="30dp"
@@ -37,7 +37,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/etEmail"
+            android:id="@+id/etLogUsername"
             android:gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:inputType="text"/>
@@ -47,63 +47,12 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/edEmail"
-        android:id="@+id/edFullName"
-        android:backgroundTint="@android:color/white"
-        android:hint="Fullname"
-        app:hintTextColor="@android:color/darker_gray"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/etFullName"
-            android:gravity="center"
-            android:textColor="@android:color/darker_gray"
-            android:fontFamily="sans-serif-condensed"
-            android:inputType="text"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/edFullName"
-        android:id="@+id/edUserName"
-        android:backgroundTint="@android:color/white"
-        android:hint="Username"
-        app:hintTextColor="@android:color/darker_gray"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/etUserName"
-            android:gravity="center"
-            android:textColor="@color/dark_grey"
-            android:fontFamily="sans-serif-condensed"
-            android:inputType="text"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/edUserName"
-        android:id="@+id/edPassword"
-        android:backgroundTint="@android:color/white"
-        android:textColor="@color/dark_grey"
+        app:layout_constraintTop_toBottomOf="@+id/edLogusername"
+        android:id="@+id/edLogPassword"
+        android:backgroundTint="@color/white"
         android:hint="Password"
-        app:hintTextColor="@android:color/darker_gray"
-        android:layout_marginTop="15dp"
+        app:hintTextColor="@color/black"
+        android:layout_marginTop="60dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +61,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/etPassword"
+            android:id="@+id/etLogPassword"
             android:gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:inputType="text"/>
@@ -122,25 +71,25 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnSignUp"
+        android:id="@+id/btnLogIn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/edPassword"
+        app:layout_constraintTop_toBottomOf="@+id/edLogPassword"
         android:backgroundTint="@color/black"
         android:fontFamily="sans-serif-condensed"
-        android:text="Sign Up "/>
+        android:text="Log in "/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
         android:id="@+id/txtSignUp"
-        android:text=" Have an account?"
-        android:layout_marginTop="10dp"
-        android:paddingStart="20dp"
+        android:text=" Don't have an account?"
+        android:layout_marginTop="50dp"
+        android:paddingStart="25dp"
         android:textSize="20sp"
         android:fontFamily="sans-serif-condensed"
         android:textFontWeight="500"
@@ -151,12 +100,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:paddingStart="100dp"
+        android:paddingEnd="0dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtSignUp"
         app:layout_constraintBottom_toBottomOf="@+id/txtSignUp"
         android:fontFamily="sans-serif-condensed"
-        android:text="Log in " />
+        android:text="Sign up " />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
