--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="my_custom_color">#2c64c6</color>
     <color name="dark_grey">#808080</color>
     <color name="sky_blue">#87CEEB</color>
     <color name="purple_200">#FFBB86FC</color>
