--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -96,11 +96,11 @@
         android:gravity="center"/>
 
     <Button
-        android:id="@+id/toLogin"
+        android:id="@+id/toSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:paddingStart="100dp"
+        android:paddingStart="150dp"
         android:paddingEnd="0dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintStart_toStartOf="parent"
