--- a/app/src/main/res/layout/books_views.xml
+++ b/app/src/main/res/layout/books_views.xml
@@ -1,13 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <TextView
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/my_custom_color"
+    android:layout_marginTop="15dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"/>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/bookImage"
+            android:paddingStart="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/book1"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/bookImage"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/bookName"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-condensed"
+            android:paddingBottom="10dp"
+            android:textSize="15sp"
+            android:text="Book Name"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/bookImage"
+            app:layout_constraintTop_toBottomOf="@+id/bookName"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/authorName"
+            android:paddingBottom="10dp"
+            android:textSize="15sp"
+            android:text="Author"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/bookImage"
+           app:layout_constraintTop_toBottomOf="@+id/authorName"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/availability"
+            android:textSize="15sp"
+            android:text="Availability"/>
 
 
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    
+
+
+
+
+</androidx.cardview.widget.CardView>
